--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
             <p class="section-subtitle">Who We Are</p>
 
-            <h2 class="h2 section-title">We Offer The Best Carrier</h2>
+            <h2 class="h2 section-title">We Offer The Best Education</h2>
 
             <ul class="about-list">
 
@@ -407,7 +407,7 @@
                 </div>
 
                 <div>
-                  <h3 class="h3 item-title">Industry Expert Instructor</h3>
+                  <h3 class="h3 item-title">Expert Instructors</h3>
 
                   <p class="item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna
@@ -424,7 +424,7 @@
                 </div>
 
                 <div>
-                  <h3 class="h3 item-title">Up-to-Date Course Content</h3>
+                  <h3 class="h3 item-title">Well Arranged curriculum</h3>
 
                   <p class="item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna
@@ -441,7 +441,7 @@
                 </div>
 
                 <div>
-                  <h3 class="h3 item-title">Biggest Student Community</h3>
+                  <h3 class="h3 item-title">Best Infrastructure and Facilities</h3>
 
                   <p class="item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna
