--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
             </ul>
 
-            <a href="#" class="btn btn-primary">
+            <a href="./assets/html/about.html" class="btn btn-primary">
               <span class="span">Know About Us</span>
 
               <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
