--- a/assets/html/Admssion.html
+++ b/assets/html/Admssion.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-list">
 
                     <li class="navbar-item">
-                        <a href="#home" class="navbar-link" data-nav-toggler>Home</a>
+                        <a href="../../index.html" class="navbar-link" data-nav-toggler>Home</a>
                     </li>
 
                     <li class="navbar-item">
