--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#courses" class="navbar-link" data-nav-toggler>Admission</a>
+            <a href="./assets/html/Admssion.html" class="navbar-link" data-nav-toggler>Admission</a>
           </li>
 
           <li class="navbar-item">
