--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosu</a>
           </li>
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-toggler>Contact </a>
+            <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
           </li>
 
         </ul>
