--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a href="#" class="navbar-link" data-nav-toggler>Facilities</a>
           </li>
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosu</a>
+            <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
           </li>
           <li class="navbar-item">
             <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
@@ -113,15 +113,9 @@
 
     </div>
   </header>
-
-
-
-
-
   <!-- 
     - #SEARCH BOX
   -->
-
   <div class="search-container" data-search-box>
     <div class="container">
 
