--- a/assets/html/Admssion.html
+++ b/assets/html/Admssion.html
@@ -84,7 +84,7 @@
                         <a href="#" class="navbar-link" data-nav-toggler>Sport Corner</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Facilities</a>
+                        <a href="./Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
                     </li>
                     <li class="navbar-item">
                         <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
