updated footer bottom

--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
 
       <div class="footer-bottom">
         <p class="copyright">
-          Copyright 2022 EduHome. All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          Copyright 2023 . All Rights Reserved by <a href="#" class="copyright-link">Anasoft</a>
         </p>
       </div>
 
