fixed email link in contact

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -31,16 +31,11 @@
     <link rel="preload" as="image" href="../images/hero-banner.png">
     <link rel="preload" as="image" href="../images/hero-abs-1.png" media="min-width(768px)">
     <link rel="preload" as="image" href="../images/hero-abs-2.png" media="min-width(768px)">
-
 </head>
-
-
 <body id="top" style="background-color:#FEE68E;">
-
     <!-- 
     - #HEADER
   -->
-
     <header class="header" data-header>
         <div class="container">
 
@@ -140,8 +135,7 @@
             <div class="contact-box">
                 <ion-icon name="mail-outline" class="contact-icon"></ion-icon>
                 <h3>Email us at</h3>
-                <p>E-mail : kvgipssullia@rediffmail.com <strong>&amp;</strong> kvgipssullia@gmail.com</p>
-
+                <p>E-mail : <a href="mailto:kvgipssullia@rediffmail.com">kvgipssullia@rediffmail.com </a><strong>&amp;</strong> <a href="mailto:kvgipssullia@gmail.com"></a>kvgipssullia@gmail.com</p>
             </div>
         </div>
 
