updated sports corner

--- a/assets/html/Admssion.html
+++ b/assets/html/Admssion.html
@@ -86,7 +86,7 @@
                         <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
+                        <a href="./contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
                     </li>
 
                 </ul>
@@ -2182,7 +2182,7 @@
         <!-- 
     - custom js link
   -->
-  <script src="../js/script.js" defer></script>
+        <script src="../js/script.js" defer></script>
 
         <!-- 
     - ionicon link
