--- a/assets/html/Facilities.html
+++ b/assets/html/Facilities.html
@@ -91,7 +91,7 @@
                         <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
+                        <a href="./contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
                     </li>
 
                 </ul>
