--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
           </li>
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
+            <a href="./assets/html/contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
           </li>
 
         </ul>
@@ -773,7 +773,6 @@
 
               </div>
             </li>
-
             <li>
               <div class="course-card">
 
