--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-toggler>Sport Corner</a>
+            <a href="./assets/html/sportscorner.html" class="navbar-link" data-nav-toggler>Sport Corner</a>
           </li>
           <li class="navbar-item">
             <a href="./assets/html/Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
@@ -88,7 +88,7 @@
             <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
           </li>
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
+            <a href="./assets/html/contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
           </li>
 
         </ul>
