--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -10,24 +10,159 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
+
+    <!-- 
+    - favicon
+  -->
+  <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
+
+  <!-- 
+  - custom css link
+-->
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="styelsheet"  href="../css/facility.css">
+  <!-- 
+  - google font link
+-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700;800&display=swap"rel="stylesheet">
+
 
 </head>
 <body>
+<!-- 
+    - #HEADER
+  -->
+
+  <header class="header" data-header>
+    <div class="container">
+
+      <h1>
+        <a href="#" class="logo">KVG IPS</a>
+      </h1>
+
+      <nav class="navbar" data-navbar>
+
+        <div class="navbar-top">
+          <a href="#" class="logo">KVG IPS</a>
+
+          <button class="nav-close-btn" aria-label="Close menu" data-nav-toggler>
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+        </div>
+
+        <ul class="navbar-list">
+
+          <li class="navbar-item">
+            <a href="/index.html" class="navbar-link" data-nav-toggler>Home</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#about" class="navbar-link" data-nav-toggler>About</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="./assets/html/Admssion.html" class="navbar-link" data-nav-toggler>Admission</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#" class="navbar-link" data-nav-toggler>Faculty</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#" class="navbar-link" data-nav-toggler>Activity</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="./assets/html/sportscorner.html" class="navbar-link" data-nav-toggler>Sport Corner</a>
+          </li>
+          <li class="navbar-item">
+            <a href="./assets/html/Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
+          </li>
+          <li class="navbar-item">
+            <a href="./assets/html/contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
+          </li>
+
+        </ul>
+
+      </nav>
+
+      <div class="header-actions">
+
+        <button class="header-action-btn" aria-label="Open search" data-search-toggler>
+          <ion-icon name="search-outline"></ion-icon>
+        </button>
+
+       
+
+        <button class="header-action-btn nav-open-btn" aria-label="Open menu" data-nav-toggler>
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+      </div>
+
+      <div class="overlay" data-nav-toggler data-overlay></div>
+
+    </div>
+  </header>
+  <!-- 
+    - #SEARCH BOX
+  -->
+  <div class="search-container" data-search-box>
+    <div class="container">
+
+      <button class="search-close-btn" aria-label="Close search" data-search-toggler>
+        <ion-icon name="close-outline"></ion-icon>
+      </button>
+
+      <div class="search-wrapper">
+        <input type="search" name="search" placeholder="Search Here..." aria-label="Search" class="search-field">
+
+        <button class="search-submit" aria-label="Submit" data-search-toggler>
+          <ion-icon name="search-outline"></ion-icon>
+        </button>
+      </div>
+
+    </div>
+  </div>
+  <!-- header close -->
+
+
+<br>
+<br>
+<br>
+<br>
+
     <section class="about-section">
         <div class="container">
             <div class="row">                
                 <div class="content-column col-lg-6 col-md-12 col-sm-12 order-2">
                     <div class="inner-column">
                         <div class="sec-title">
-                            <span class="title">About Css3transition</span>
+                            <span class="title">About KVGIPS</span>
                             <h2>We are Creative Tech Enthusiast working since 2015</h2>
                         </div>
-                        <div class="text">I am Rahul Yaduvanshi works at Css3 Transition since last 3 years. We are here to provide touch notch solution for your website or web application that helps you to make your website look attractive & efficient in handling by creating usefull plugins thats you need.</div>
+                        <div class="text">KVG International Public School started in the year 2008 with a few students and has a strength of over 421 students.
+                           It offers programmes from LKG upto 10th standard and is affiliated to the CBSE .
+                            with its innovative treatment and distinctive facilities and features, 
+                            KVGIPS has come to be an acknowledged Academy of Excellence in the sphere of education today.
+                        
+                          Founder student Master Maourya R Kurunji lighting the lamp in the presence of founder President Dr. Kurunji Venkatramana Gowda .
+                           Flanked by general secretory Dr. Renuka Prasad K.V and former town President Mr. N.A Ramachandra Gowda.
+                          KVG International Public School is the brainchild of Dr. Renuka Prasad K.V and Dr. Jyothi R Prasad.
+                           The school which works under a deliberate process towards full development of a child’s potential in academics, sports, art and leadership requirements for a sound future.
+                            The school has probably the most comprehensive programme around the year.
+
                       <div class="text">
-                        We are here to serve you next level tutorial that currently in trend to match you with your expertise. Css3 transition is a learning website. where you can find many good quality content related to web development and tutorials about plugins. here we are using html, html5, css, css3, jquery & javascript along with inspirational UI design layout by professionals by using Photoshop and adobe allustrator.
+
                       </div>
                         <div class="btn-box">
-                            <a href="#" class="theme-btn btn-style-one">Contact Us</a>
+                            <a href="./contact.html" class="theme-btn btn-style-one">Contact Us</a>
                         </div>
                     </div>
                 </div>
