home page updated

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -73,7 +73,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Sport Corner</a>
+                        <a href="./sportscorner.html" class="navbar-link" data-nav-toggler>Sport Corner</a>
                     </li>
                     <li class="navbar-item">
                         <a href="./Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
