--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,38 +1,161 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KVG IPS</title>
-     <link rel="stylesheet" href="../css/style.css"> 
-    <link rel="stylesheet" href="../css/about.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-     <link rel="stylesheet" href="./assets/css/style.css"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KVG International Public School</title>
 
     <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml" />
 
-  <!-- 
-  - custom css link
+    <!-- 
+    - custom css link
+  -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="styelsheet" href="../css/about.css" />
+    <!-- 
+    - google font link
+  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- 
+    - preload images
+  -->
+   
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </head>
+
+  <body id="top">
+    <!-- 
+    - #HEADER
+  -->
+
+    <header class="header" data-header>
+      <div class="container">
+        <h1>
+          <a href="/index.html" class="logo">KVG IPS</a>
+        </h1>
+
+        <nav class="navbar" data-navbar>
+          <div class="navbar-top">
+            <a href="/index.html" class="logo">KVG IPS</a>
+
+            <button
+              class="nav-close-btn"
+              aria-label="Close menu"
+              data-nav-toggler
+            >
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
+          </div>
+
+          <ul class="navbar-list">
+            <li class="navbar-item">
+              <a href="../../index.html" class="navbar-link" data-nav-toggler
+                >Home</a
+              >
+            </li>
+
+            <li class="navbar-item">
+              <a href="#about" class="navbar-link" data-nav-toggler>About</a>
+            </li>
+
+            <li class="navbar-item">
+              <a
+                href="../html/Admssion.html"
+                class="navbar-link"
+                data-nav-toggler
+                >Admission</a
+              >
+            </li>
+
+            <li class="navbar-item">
+              <a href="#event" class="navbar-link" data-nav-toggler>Faculty</a>
+            </li>
+
+            <li class="navbar-item">
+              <a href="#" class="navbar-link" data-nav-toggler>Activity</a>
+            </li>
+
+            <li class="navbar-item">
+              <a href="#" class="navbar-link" data-nav-toggler>Sport Corner</a>
+            </li>
+            <li class="navbar-item">
+              <a href="./Facilities.html" class="navbar-link" data-nav-toggler
+                >Facilities</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#" class="navbar-link" data-nav-toggler
+                >CBSE Mandatory Disclosue</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="./contact.html" class="navbar-link" data-nav-toggler
+                >Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header-actions">
+          <button
+            class="header-action-btn nav-open-btn"
+            aria-label="Open menu"
+            data-nav-toggler
+          >
+            <ion-icon name="menu-outline"></ion-icon>
+          </button>
+        </div>
+
+        <div class="overlay" data-nav-toggler data-overlay></div>
+      </div>
+    </header>
+    <!-- 
+    - #SEARCH BOX
+  -->
+  <div class="mydiv">
+    <h1 class="history-title">HISTORY</h1>
+</div>
+
+  
+
+
+
+
+
+
+
+    <!-- 
+    - custom js link
+  -->
+    <script src="../js/script.js" defer></script>
+
+    <!-- 
+- ionicon link
 -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="styelsheet"  href="../css/facility.css">
-  <!-- 
-  - google font link
--->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700;800&display=swap"rel="stylesheet">
-
-
-</head>
-<body>
-
-
-</body>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
