--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -131,6 +131,7 @@
   -->
   <div class="mydiv">
     <h1 class="history-title">HISTORY</h1>
+    It was the dream of Dr.Kurunji  Venkatramana Gowda that English Education must be accessible to the inquisitive minds of Sullia and its neighbouring places
 </div>
 
   
