--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <h2 class="h2 section-title">
             Welcome to KVG IPS</h2>
 
-          <p>
+          <p class="hero-text">
 
 
 
