updated abouted us history

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -109,6 +109,17 @@
       It was the dream of Dr.Kurunji Venkatramana Gowda that English Education must be accessible to the inquisitive
       minds of Sullia and its neighbouring places
     </p>
+    <br>
+    <p>It was in the year 2008 that Dr.Renuka Prasad K.V felt the need for a CBSE school in this serene land.
+       His desire was fostered by his belief that “Children must be taught how to think, not what to think”. Dr.Jyothi R.Prasad joined hands with him in his mission. The school started with a humble beginning. 
+       As the years passed by the school earned good name and fame. The strength of the school today is its dynamic faculty who could make the students to think. 
+       Within a short span of time the school is recognized globally. Some of its accomplishments include International School Award sponsored by the British Council, U.K., First Place at the CBSE Regional Level Science Exhibition, Wonderla Environment and Energy Conservation Award and many more.
+        KVGIPS is known for academic excellence,child centred  activity based education and world class infrastructure
+    </p>
+    <br>
+    <p>Founder student Master Mourya R Kurunji lighting the Lamp in the  presence of the founder President Dr. Kurunji Venkatramana Gowda flanked by General Secretary Dr.Renuka Prasad K.V and former Town Panchayath President Mr. N.A Ramachandra Gowda.</p>
+    <p>K.V.G. International Public School is the brainchild of Dr.Renuka Prasad K. V  and Dr. Jyothi R. Prasad. The school  works under a deliberate process towards full development of a child’s potential in academics, sports, art and leadership requirements for a sound future. 
+      The school curriculum is designed keeping in view of the complete growth and development of the children with child centred approach.</p>
   </div>
   </main>
 
