updated about page

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -29,8 +29,11 @@
     <link rel="preload" as="image" href="../images/hero-abs-1.png" media="min-width(768px)">
     <link rel="preload" as="image" href="../images/hero-abs-2.png" media="min-width(768px)">
 </head>
-<body id="top" style="background-color:#FEE68E;">
+<body id="top" style="background-image: url('../images/hero-bg.jpg');
+background-attachment: fixed;
+">
     <!-- 
+
     - #HEADER
   -->
     <header class="header" data-header>
