--- a/assets/html/Admssion.html
+++ b/assets/html/Admssion.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#about" class="navbar-link" data-nav-toggler>About</a>
+                        <a href="./about.html" class="navbar-link" data-nav-toggler>About</a>
                     </li>
 
                     <li class="navbar-item">
@@ -69,7 +69,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#event" class="navbar-link" data-nav-toggler>Faculty</a>
+                        <a href="faculty" class="navbar-link" data-nav-toggler>Faculty</a>
                     </li>
 
                     <li class="navbar-item">
@@ -77,13 +77,13 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Sport Corner</a>
+                        <a href="./sportscorner.html" class="navbar-link" data-nav-toggler>Sport Corner</a>
                     </li>
                     <li class="navbar-item">
                         <a href="./Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
+                        <a href="cbse.html" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
                     </li>
                     <li class="navbar-item">
                         <a href="./contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
@@ -2182,6 +2182,14 @@
         <!-- 
     - custom js link
   -->
+  <a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
+    <ion-icon name="arrow-up"></ion-icon>
+  </a>
+  <!-- 
+    - custom js link
+  -->
+  <script src=".././js/script.js" defer></script>
+
         <script src="../js/script.js" defer></script>
 
         <!-- 
