--- a/assets/html/sportscorner.html
+++ b/assets/html/sportscorner.html
@@ -83,19 +83,19 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/facutlty.html">Faculty</a>
+                    <a class="nav-link" href="./faculty.html">Faculty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/activity.html">Activity</a>
+                    <a class="nav-link" href="./activity.html">Activity</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Sports Corner</a>
+                    <a class="nav-link" href="./sportscorner.html">Sports Corner</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Facilities.html">Facilities</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/cbse_manditory_disclosure.html">CBSE Mandatory Disclosue</a>
+                    <a class="nav-link" href="./cbse.html">CBSE Mandatory Disclosue</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact us</a>
@@ -1446,7 +1446,14 @@
 -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+    <a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
+        <ion-icon name="arrow-up"></ion-icon>
+      </a>
+      <!-- 
+        - custom js link
+      -->
+      <script src=".././js/script.js" defer></script>
+    
 
 
 </body>
