--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -60,11 +60,11 @@ background-attachment: fixed;
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#about" class="navbar-link" data-nav-toggler>About</a>
+                        <a href="./about.html" class="navbar-link" data-nav-toggler>About</a>
                     </li>
 
                     <li class="navbar-item">
-                        <a href="" class="navbar-link" data-nav-toggler>Admission</a>
+                        <a href="Admssion.html" class="navbar-link" data-nav-toggler>Admission</a>
                     </li>
 
                     <li class="navbar-item">
@@ -82,10 +82,10 @@ background-attachment: fixed;
                         <a href="./Facilities.html" class="navbar-link" data-nav-toggler>Facilities</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
+                        <a href="cbse.html" class="navbar-link" data-nav-toggler>CBSE Mandatory Disclosue</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-toggler>Contact us </a>
+                        <a href="./contact.html" class="navbar-link" data-nav-toggler>Contact us </a>
                     </li>
 
                 </ul>
@@ -157,11 +157,18 @@ background-attachment: fixed;
     <!-- 
     - custom js link
   -->
-    <script src="../../assets/js/script.js" defer></script>
+   
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-
+    <a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
+        <ion-icon name="arrow-up"></ion-icon>
+      </a>
+      <!-- 
+        - custom js link
+      -->
+      <script src=".././js/script.js" defer></script>
+    
 </body>
 
 </html>
